--- a/sobre.html
+++ b/sobre.html
@@ -25,7 +25,7 @@
             <h1>Sobre</h1>
             <hr>
             <h3>Quem sou eu?</h3>
-            <p>Meu nome é Gisele, tenho 21 anos e arte sempre foi minha paixão...</p>
+            <p>Meu nome é Gisele, tenho 21 anos e aroooooioioioioioiooiote sempre foi minha paixão...</p>
         </div>
         <img class="picture" src="./src/img/eu2.jpg">
     </div>
