--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 
     <div class="container">
         <div class="content">
-            <h3>Identidade Visual - Logo</h3>
-            <h2>Gisele Souza dos Santos</h2>
-            <p>Estudante de Design, Estagiária C6 bank, 2 anos trabalhando com design e garota de programa</p>
+           <h3>Design Gráfico e Design Digital</h3>
+      <h2>Gisele Souza dos Santos</h2>
+      <br>
+      <p>Estudante de Design <br>
+        Estagiária C6 bank</p>
         </div>
         <img class="picture" src="./src/img/eu1.jpg">
     </div>
