--- a/sobre.html
+++ b/sobre.html
@@ -24,8 +24,9 @@
         <div class="informações">
             <h1>Sobre</h1>
             <hr>
-            <h3>Quem sou eu?</h3>
-            <p>Meu nome é Gisele, tenho 21 anos e aroooooioioioioioiooiote sempre foi minha paixão...</p>
+           <h3>Quem sou eu?</h3>
+      <p>Meu nome é Gisele, tenho 21 anos e atualmente sou estagiária de product designer do C6 bank. Iniciei minha carreira em 2022
+        como designer no ramo de estamparia e hoje exploro  o design gráfico e digital. Tenho experiência com trabalhos gráficos como: Identidade Visual, customização de produtos físicos e manipulação de imagem.  </p>
         </div>
         <img class="picture" src="./src/img/eu2.jpg">
     </div>
